feat wijzig bijnaam
