# src/main/resources/static/PlusMin-api-docs.yaml
@@ -128,6 +128,38 @@ paths:
             '*/*':
               schema:
                 type: object
+  /gebruikers/zelf:
+    get:
+      tags:
+      - gebruiker-controller
+      summary: GET de gebruiker incl. eventuele hulpvragers op basis van de JWT van
+        een gebruiker
+      operationId: findGebruiker
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/GebruikerDTO"
+    put:
+      tags:
+      - gebruiker-controller
+      summary: PUT de bijnaam van de gebruiker
+      operationId: updateGebruiker
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/GebruikerDTO"
   /demo/administratie/{administratieId}/reset:
     put:
       tags:
@@ -732,20 +764,6 @@ paths:
             '*/*':
               schema:
                 type: object
-  /gebruikers/zelf:
-    get:
-      tags:
-      - gebruiker-controller
-      summary: GET de gebruiker incl. eventuele hulpvragers op basis van de JWT van
-        een gebruiker
-      operationId: findGebruiker
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/GebruikerDTO"
   /betalingen/administratie/{administratieId}/valideer-betalingen:
     get:
       tags:
@@ -924,6 +942,81 @@ components:
       required:
       - id
       - notities
+    AdministratieDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        naam:
+          type: string
+        periodeDag:
+          type: integer
+          format: int32
+        eigenaarNaam:
+          type: string
+        eigenaarSubject:
+          type: string
+        periodes:
+          type: array
+          items:
+            $ref: "#/components/schemas/PeriodeDTO"
+        gebruikers:
+          type: array
+          items:
+            $ref: "#/components/schemas/GebruikerDTO"
+      required:
+      - id
+      - naam
+      - periodeDag
+    GebruikerDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        subject:
+          type: string
+        bijnaam:
+          type: string
+        roles:
+          type: array
+          items:
+            type: string
+        administraties:
+          type: array
+          items:
+            $ref: "#/components/schemas/AdministratieDTO"
+      required:
+      - administraties
+      - bijnaam
+      - id
+      - roles
+      - subject
+    PeriodeDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        periodeStartDatum:
+          type: string
+        periodeEindDatum:
+          type: string
+        periodeStatus:
+          type: string
+          enum:
+          - HUIDIG
+          - OPEN
+          - GESLOTEN
+          - OPGERUIMD
+        saldoLijst:
+          type: array
+          items:
+            $ref: "#/components/schemas/SaldoDTO"
+      required:
+      - id
+      - periodeStartDatum
     BetalingDTO:
       type: object
       properties:
@@ -1093,81 +1186,6 @@ components:
       - rekeningGroepSoort
       - rekeningen
       - sortOrder
-    AdministratieDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        naam:
-          type: string
-        periodeDag:
-          type: integer
-          format: int32
-        eigenaarNaam:
-          type: string
-        eigenaarSubject:
-          type: string
-        periodes:
-          type: array
-          items:
-            $ref: "#/components/schemas/PeriodeDTO"
-        gebruikers:
-          type: array
-          items:
-            $ref: "#/components/schemas/GebruikerDTO"
-      required:
-      - id
-      - naam
-      - periodeDag
-    GebruikerDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        subject:
-          type: string
-        bijnaam:
-          type: string
-        roles:
-          type: array
-          items:
-            type: string
-        administraties:
-          type: array
-          items:
-            $ref: "#/components/schemas/AdministratieDTO"
-      required:
-      - administraties
-      - bijnaam
-      - id
-      - roles
-      - subject
-    PeriodeDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        periodeStartDatum:
-          type: string
-        periodeEindDatum:
-          type: string
-        periodeStatus:
-          type: string
-          enum:
-          - HUIDIG
-          - OPEN
-          - GESLOTEN
-          - OPGERUIMD
-        saldoLijst:
-          type: array
-          items:
-            $ref: "#/components/schemas/SaldoDTO"
-      required:
-      - id
-      - periodeStartDatum
     Administratie:
       type: object
       properties:
